--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -1,21 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="60dp">
 
         <TextView
             android:id="@+id/task_title"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_margin="12dp"
+            app:layout_constraintEnd_toStartOf="@id/buttonEdit"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:background="@android:color/holo_blue_bright"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            tools:text="Task"
             android:layout_height="wrap_content" />
 
         <ImageButton
             android:id="@+id/buttonDelete"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:src="@android:drawable/ic_menu_delete"
             android:layout_width="wrap_content"
+            android:layout_margin="12dp"
             android:layout_height="wrap_content" />
-    </LinearLayout>
+
+        <ImageButton
+            android:id="@+id/buttonEdit"
+            app:layout_constraintEnd_toStartOf="@id/buttonDelete"
+            app:layout_constraintTop_toTopOf="@id/buttonDelete"
+            app:layout_constraintBottom_toBottomOf="@id/buttonDelete"
+            android:src="@drawable/ic_baseline_edit_24"
+            android:layout_width="wrap_content"
+            android:layout_margin="12dp"
+            android:layout_height="wrap_content" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
